--- a/konami.html
+++ b/konami.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Konami Code</title>
-</head>
-<body>
-<h1>Konami Code</h1>
+  <head>
+    <title>Konami Code</title>
+  </head>
+  <body>
+    <h1>Konami Code</h1>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<!--<script src="./js/jquery.js"></script>-->
-<script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script>
+      const keys = {
+        38: `up`,
+        40: `down`,
+        37: `left`,
+        39: `right`,
+        66: `b`,
+        65: `a`,
+        13: `start`,
+      };
 
-  const keys = {
-    38: `up`,
-    40: `down`,
-    37: `left`,
-    39: `right`,
-    66: `b`,
-    65: `a`,
-    13: `start`
-  };
+      const konamiCode = [`up`, `up`, `down`, `down`, `left`, `right`, `left`, `right`, `b`, `a`, `start`];
+      let codePosition = 0;
 
-  const konamiCode = [`up`, `up`, `down`, `down`, `left`, `right`, `left`, `right`, `b`, `a`, `start`];
-  let codePosition = 0;
+      $(document).keydown((e) => {
+        let key = keys[e.keyCode];
+        let requiredKey = konamiCode[codePosition];
+        if (requiredKey === key) {
+          codePosition++;
+          if (codePosition === konamiCode.length) {
+            activateCheat();
+            codePosition = 0;
+          }
+        } else {
+          codePosition = 0;
+        }
+      });
 
-  $(document).keydown((e) => {
-    let key = keys[e.keyCode];
-    let requiredKey = konamiCode[codePosition];
-    if (requiredKey === key) {
-      codePosition++;
-      if (codePosition === konamiCode.length) {
-        activateCheat();
-        codePosition = 0;
+      function activateCheat() {
+        $(`body`).css(`background-color`, `#000000`);
+        let div = $(`body`).html(`<div></div>`);
+        div.css(`display`, `flex`);
+        div.css(`justify-content`, `center`);
+        div.css(`align-items`, `center`);
+        div.css(`user-select`, `none`);
+        let contra = $(`body`).html(`h1`);
+        contra.css(`color`, `#ff0000`);
+        contra.css(`font-family`, `sans-serif`);
+        contra.css(`text-align`, `center`);
+        contra.css(`border`, `none`);
+        contra;
+        let video = $(`body`).html(`
+        <div><h1>Enjoy CONTRA with 30 LIVES!</h1>
+        <iframe width="560" height="315" style="border: none" src="https://www.youtube.com/embed/7h-jsV2K6hA?autoplay=1"
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+        </div>`);
+        alert(`You have 30 lives!`);
+        video;
       }
-    } else {
-      codePosition = 0;
-    }
-  });
-
-  function activateCheat() {
-    $(`body`).css(`background-color`, `#000000`);
-    let div = $(`body`).html(`<div></div>`);
-    div.css(`display`, `flex`);
-    div.css(`justify-content`, `center`);
-    div.css(`align-items`, `center`);
-    div.css(`user-select`, `none`);
-    let contra = $(`body`).html(`h1`);
-    contra.css(`color`, `#ff0000`);
-    contra.css(`font-family`, `sans-serif`);
-    contra.css(`text-align`, `center`);
-    contra.css(`border`, `none`)
-    contra;
-    let video = $(`body`).html(`
-  <div><h1>Enjoy CONTRA with 30 LIVES!</h1>
-  <iframe width="560" height="315" style="border: none" src="https://www.youtube.com/embed/7h-jsV2K6hA?autoplay=1"
-  title="YouTube video player"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen></iframe>
-  </div>`);
-    alert(`You have 30 lives!`);
-    video;
-  }
-</script>
-</body>
+    </script>
+  </body>
 </html>
