updated for completion

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -48,27 +48,26 @@
         <dd class="invisible" style="margin-bottom: 1em">a mountain goat, which is not a native species to the region, killed a man in 2010.</dd>
       </dl>
     </div>
-
     <h3 id="great-smoky-mountains-national-park-heading">Great Smoky Mountains National Park</h3>
     <ul id="great-smoky-mountains-national-park-facts">
-      <li>Established	1933</li>
-      <li>Visitors 53,750 </li>
-      <li>Located about 15 miles southwest of Abilene</li>
-      <li>was once a campground for Comanche Indians</li>
+      <li>Most Visited National Park in the United States</li>
+      <li>Salamander Capital of the World</li>
+      <li>Some of the Oldest Mountains in the World</li>
+      <li>Mountaintop Temperatures Rarely Reach Above 80 Degrees</li>
     </ul>
     <h3 id="zion-national-park-heading">Zion National Park</h3>
     <ul id="zion-national-park-facts">
-      <li>Choke Canyon Reservoir provides drinking water for the city of Corpus Christi</li>
-      <li>It's about 65 miles south of the city of San Antonio</li>
-      <li>The site hosted a rare bird, a Spotted Rail</li>
-      <li>Has a capacity of more than 695,000 acre-feet of water</li>
+      <li>Zion National Park Encompasses 232 Square Miles</li>
+      <li>The Park Has 2,000-Foot Sandstone Cliffs</li>
+      <li>Zion Contains the Fourth Largest Freestanding Arch in the World</li>
+      <li>Zion National Park Is Part of an Active Volcano Field</li>
     </ul>
-    <h3 id="big-bend-heading">Big Bend National Park Facts</h3>
-    <ul id="big-bend">
-      <li>Location: Texas</li>
-      <li>Acreage: 801,163 acres</li>
-      <li>Visitation: 581,000 visitors in 2021</li>
-      <li>Highest Elevation: 7,825 feet at Emory Peak</li>
+    <h3 id="yellowstone-national-park-heading">Yellowstone National Park Facts</h3>
+    <ul id="yellowstone-national-park-facts">
+      <li>Yellowstone encompasses 3,472 square miles, which makes it larger than Rhode Island and Delaware combined.</li>
+      <li>There are more than 10,000 hydrothermal features in Yellowstone.</li>
+      <li>Yellowstone is home to more than 500 active geysers.</li>
+      <li>About 290 waterfalls can be found throughout Yellowstone’s 2.2 million acres.</li>
     </ul>
     <button id="button">Press me</button>
     <br />
