--- a/konami.html
+++ b/konami.html
@@ -5,7 +5,6 @@
   </head>
   <body>
     <h1>Konami Code</h1>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script>
       (() => {
@@ -30,7 +29,7 @@
           if (requiredKey === key) {
             codePosition++;
             if (codePosition === konamiCode.length) {
-              activateCheat();
+              konamiCodeActivated();
               codePosition = 0;
             }
           } else {
@@ -38,12 +37,12 @@
           }
         });
 
-        function activateCheat() {
+        function konamiCodeActivated() {
           $(`body`).css(`background-color`, `#000000`);
           let div = $(`body`).html(`<div></div>`);
           div.css(`display`, `flex`);
           div.css(`justify-content`, `center`);
-          div.css(`align-items`, `center`);
+          div.css(`align-items`, `flex-start`);
           div.css(`user-select`, `none`);
           let contra = $(`body`).html(`h1`);
           contra.css(`color`, `#ff0000`);
@@ -52,14 +51,49 @@
           contra.css(`border`, `none`);
           contra;
           let video = $(`body`).html(`
-        <div><h1>Enjoy CONTRA with 30 LIVES!</h1>
-        <iframe width="560" height="315" style="border: none" src="https://www.youtube.com/embed/7h-jsV2K6hA?autoplay=1"
-        title="YouTube video player"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-        </div>`);
+          <div><h1>Enjoy CONTRA with 30 LIVES!</h1>
+          <iframe width="560" height="315" style="border: none" src="https://www.youtube.com/embed/7h-jsV2K6hA?autoplay=1"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+          <div>
+          <button>Reload</button>
+          </div></div>
+          <div>
+            <h1>Or just play it here</h1>
+            <iframe src="https://www.retrogames.cc/embed/16841-contra-usa.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+            </div>
+          `);
           alert(`You have 30 lives!`);
           video;
+          $(`button`).click(() => {
+            location.reload();
+          });
+          $(`button`).css(`background-color`, `#ff0000`);
+          $(`button`).css(`color`, `#000`);
+          $(`button`).css(`border`, `none`);
+          $(`button`).css(`padding`, `10px`);
+          $(`button`).css(`font-size`, `20px`);
+          $(`button`).css(`font-weight`, `bold`);
+          $(`button`).css(`cursor`, `pointer`);
+          $(`button`).css(`border-radius`, `5px`);
+          $(`button`).css(`margin-top`, `20px`);
+          $(`button`).css(`margin-bottom`, `20px`);
+          $(`button`).css(`margin-left`, `auto`);
+          $(`button`).css(`margin-right`, `auto`);
+          $(`button`).css(`display`, `block`);
+          $(`button`).css(`user-select`, `none`);
+          $(`button`).hover(
+            () => {
+              $(`button`).css(`background-color`, `#000`);
+              $(`button`).css(`color`, `#ff0000`);
+              $(`button`).css(`transition`, `0.5s ease`);
+            },
+            () => {
+              $(`button`).css(`background-color`, `#ff0000`);
+              $(`button`).css(`color`, `#000`);
+            }
+          );
         }
       })();
     </script>
