--- a/extra-challenges/css bonus challenges/JavScript Calculator/calculator.html
+++ b/extra-challenges/css bonus challenges/JavScript Calculator/calculator.html
@@ -14,47 +14,46 @@
     <div class="calculator-wrapper">
       <div class="calculator-container">
         <form class="form">
-          <input class="result-display">
+          <input class="result-display" />
         </form>
         <div class="container-inputs">
           <div class="white-inputs">
             <div class="white-inputs-row-1">
-              <input type="button" class="inp-white" value="C" id="clear">
-              <input type="button" class="inp-white" value="+/-" id="plus-minus">
-              <input type="button" class="inp-white" value="%" id="percent">
+              <input type="button" class="inp-white" value="C" id="clear" />
+              <input type="button" class="inp-white" value="+/-" id="plus-minus" />
+              <input type="button" class="inp-white" value="%" id="percent" />
             </div>
             <div class="white-inputs-row-2">
-              <input type="button" class="inp-white" id="seven" onclick="" value="7">
-              <input type="button" class="inp-white" id="eight" onclick="" value="8">
-              <input type="button" class="inp-white" id="nine" onclick="" value="9">
+              <input type="button" class="inp-white" id="seven" onclick="" value="7" />
+              <input type="button" class="inp-white" id="eight" onclick="" value="8" />
+              <input type="button" class="inp-white" id="nine" onclick="" value="9" />
             </div>
             <div class="white-inputs-row-3">
-              <input type="button" class="inp-white" id="four" onclick="" value="4">
-              <input type="button" class="inp-white" id="five" onclick="" value="5">
-              <input type="button" class="inp-white" id="six"  onclick="" value="6">
+              <input type="button" class="inp-white" id="four" onclick="" value="4" />
+              <input type="button" class="inp-white" id="five" onclick="" value="5" />
+              <input type="button" class="inp-white" id="six" onclick="" value="6" />
             </div>
             <div class="white-inputs-row-3">
-              <input type="button" class="inp-white" value="1" onclick="insert(1)" id="one">
-              <input type="button" class="inp-white" value="2" onclick="insert(1)" id="two">
-              <input type="button" class="inp-white" value="3" onclick="insert(1)" id="three">
+              <input type="button" class="inp-white" value="1" onclick="insert(1)" id="one" />
+              <input type="button" class="inp-white" value="2" onclick="insert(1)" id="two" />
+              <input type="button" class="inp-white" value="3" onclick="insert(1)" id="three" />
             </div>
             <div class="white-inputs-row-4">
-              <input type="button" class="inp-white" value="0" onclick="" id="zero">
-              <input type="button" class="inp-white" value="." onclick="" id="decimal">
+              <input type="button" class="inp-white" value="0" onclick="" id="zero" />
+              <input type="button" class="inp-white" value="." onclick="" id="decimal" />
             </div>
           </div>
           <div class="orange-inputs">
-            <input type="button" class="inp-orange" value="/" onclick="" id="divide">
-            <input type="button" class="inp-orange" value="X" onclick="" id="multiply">
-            <input type="button" class="inp-orange" value="-" onclick="" id="subtract">
-            <input type="button" class="inp-orange" value="+" onclick="" id="add">
-            <input type="button" class="inp-orange" value="=" onclick="" id="equals">
+            <input type="button" class="inp-orange" value="/" onclick="" id="divide" />
+            <input type="button" class="inp-orange" value="X" onclick="" id="multiply" />
+            <input type="button" class="inp-orange" value="-" onclick="" id="subtract" />
+            <input type="button" class="inp-orange" value="+" onclick="" id="add" />
+            <input type="button" class="inp-orange" value="=" onclick="" id="equals" />
           </div>
         </div>
       </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>    
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
   </body>
 </html>
