--- a/extra-challenges/css bonus challenges/JavScript Calculator/calculator.html
+++ b/extra-challenges/css bonus challenges/JavScript Calculator/calculator.html
@@ -13,9 +13,7 @@
   <body>
     <div class="calculator-wrapper">
       <div class="calculator-container">
-        <form class="form">
-          <input class="result-display" />
-        </form>
+          <input type="text" class="result" value="" />
         <div class="container-inputs">
           <div class="white-inputs">
             <div class="white-inputs-row-1">
@@ -24,31 +22,31 @@
               <input type="button" class="inp-white" value="%" id="percent" />
             </div>
             <div class="white-inputs-row-2">
-              <input type="button" class="inp-white" id="seven" onclick="" value="7" />
-              <input type="button" class="inp-white" id="eight" onclick="" value="8" />
-              <input type="button" class="inp-white" id="nine" onclick="" value="9" />
+              <input type="button" class="inp-white" id="seven" value="7" />
+              <input type="button" class="inp-white" id="eight" value="8" />
+              <input type="button" class="inp-white" id="nine" value="9" />
             </div>
             <div class="white-inputs-row-3">
-              <input type="button" class="inp-white" id="four" onclick="" value="4" />
-              <input type="button" class="inp-white" id="five" onclick="" value="5" />
-              <input type="button" class="inp-white" id="six" onclick="" value="6" />
+              <input type="button" class="inp-white" id="four" value="4" />
+              <input type="button" class="inp-white" id="five" value="5" />
+              <input type="button" class="inp-white" id="six" value="6" />
             </div>
             <div class="white-inputs-row-3">
-              <input type="button" class="inp-white" value="1" onclick="insert(1)" id="one" />
-              <input type="button" class="inp-white" value="2" onclick="insert(1)" id="two" />
-              <input type="button" class="inp-white" value="3" onclick="insert(1)" id="three" />
+              <input type="button" class="inp-white" value="1" id="one" />
+              <input type="button" class="inp-white" value="2" id="two" />
+              <input type="button" class="inp-white" value="3" id="three" />
             </div>
             <div class="white-inputs-row-4">
-              <input type="button" class="inp-white" value="0" onclick="" id="zero" />
-              <input type="button" class="inp-white" value="." onclick="" id="decimal" />
+              <input type="button" class="inp-white" value="0" id="zero" />
+              <input type="button" class="inp-white" value="." id="decimal" />
             </div>
           </div>
           <div class="orange-inputs">
-            <input type="button" class="inp-orange" value="/" onclick="" id="divide" />
-            <input type="button" class="inp-orange" value="X" onclick="" id="multiply" />
-            <input type="button" class="inp-orange" value="-" onclick="" id="subtract" />
-            <input type="button" class="inp-orange" value="+" onclick="" id="add" />
-            <input type="button" class="inp-orange" value="=" onclick="" id="equals" />
+            <input type="button" class="inp-orange" value="/" id="divide" />
+            <input type="button" class="inp-orange" value="x" id="multiply" />
+            <input type="button" class="inp-orange" value="-" id="subtract" />
+            <input type="button" class="inp-orange" value="+" id="add" />
+            <input type="button" class="inp-orange" value="=" id="equals" />
           </div>
         </div>
       </div>
