--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Ajax Blog</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ajax Blog</title>
+  </head>
+  <body>
+    <div id="posts"></div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script>
+      (function () {
+        "use strict";
 
-  <div id="posts"></div>
+        // Use Ajax to load the contents of blog.json and add the data from it to your #posts div.
+        // Add additional entries to blog.json and make sure your changes are reflected on the page.
 
-</body>
+        $.ajax({
+          url: "data/blog.json",
+          type: "GET",
+          dataType: "json",
+        }).done(function (data) {
+          console.log(data);
+          data.forEach(function (post) {
+            let row = $("<div>");
+            row.append($("<h2>").text(post.title));
+            row.append($("<p>").text(post.content));
+            row.append($("<p>").text(post.date));
+            $("#posts").append(row);
+          });
+        });
+
+      })();
+    </script>
+  </body>
 </html>
