--- a/ajax-store.html
+++ b/ajax-store.html
@@ -22,6 +22,9 @@
         width: 40%;
         margin: 1em auto;
       }
+      th {
+        text-align: center;
+      }
       td {
         border: 1px solid white;
         box-shadow: 0 0 0.2em black;
