--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/mapbox_maps_api.css" />
     <title>Mapbox API</title>
   </head>
   <body>
-    <!-- Generate a map that shows the city with your favorite restaurant using geocoding.  -->
-
-    <!-- Redraw the map of the above location at zoom levels 5, 15, and 20. Do this by simply changing the value of zoom level where the map properties are initially set and refresh the page to see the changes. Can the zoom be changed programmatically after the initial map is drawn?  -->
-
-    <!-- Create a marker on your map of the exact location of your favorite restaurant set the zoom to allow for best viewing distance.  -->
-
-    <!-- Create a popup with the name of the restaurant.  -->
-
-    <!-- Make sure the info window does not display until the marker has been clicked on.  -->
-
-    <!-- Refactor your code to display at least three of your favorite restaurants with information about each. Create an array of objects with information about each restaurant to accomplish this. Use a .forEach() loop rather than a for loop. -->
-
+    <div id="map" style="width: 100%; height: 100vh"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script></script>
+    <script src="./js/mapbox_maps_api.js"></script>
   </body>
 </html>
