--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -10,7 +10,8 @@
     <title>Mapbox API</title>
   </head>
   <body>
-    <div id="map" style="width: 100%; height: 100vh"></div>
+    <div id="map" style="width: 100%; height: 80vh"></div>
+    <mapbox-search-box access-token="<your access token here>" proximity="0,0"></mapbox-search-box>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/mapbox_maps_api.js"></script>
   </body>
