--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -13,7 +13,7 @@
     <title>Mapbox API</title>
   </head>
   <body>
-    <div id="map" style="width: 100%; height: 80vh"></div>
+    <div id="map"></div>
     <mapbox-search-box access-token="<your access token here>" proximity="0,0"></mapbox-search-box>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/mapbox_maps_api.js"></script>
