--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js'></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet" />
-    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="./css/mapbox_maps_api.css" />
-    <title>Mapbox API</title>
-  </head>
-  <body>
-    <div id="map"></div>
-    <mapbox-search-box access-token="<your access token here>" proximity="0,0"></mapbox-search-box>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/mapbox_maps_api.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js'></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet" />
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="./css/mapbox_maps_api.css" />
+
+  <title>Mapbox API</title>
+</head>
+
+<body>
+<h1 class="heading">My first mapbox</h1>
+<div id="map">
+  <div class="container-button">
+    <button class="zoom-in">+</button>
+    <button class="zoom-out">-</button>
+  </div>
+</div>
+<div class="container-search">
+  <input class="search-input" type="text" placeholder="Search">
+  <button class="search">Go</button>
+</div>
+<mapbox-search-box access-token="<your access token here>" proximity="0,0"></mapbox-search-box>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="./js/mapbox_maps_api.js"></script>
+
+</body>
+
 </html>
