--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/mapbox_maps_api.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js'></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet" />
-  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="./css/mapbox_maps_api.css" />
+    <title>Mapbox API</title>
+  </head>
 
-  <title>Mapbox API</title>
-</head>
-
-<body>
-<h1 class="heading">My first mapbox</h1>
-<div id="map">
-  <div class="container-button">
-    <button class="zoom-in">+</button>
-    <button class="zoom-out">-</button>
-  </div>
-</div>
-<div class="container-search">
-  <input class="search-input" type="text" placeholder="Search">
-  <button class="search">Go</button>
-</div>
-<mapbox-search-box access-token="<your access token here>" proximity="0,0"></mapbox-search-box>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="./js/mapbox_maps_api.js"></script>
-
-</body>
-
+  <body>
+    <h1 class="heading">My first mapbox</h1>
+    <div id="map">
+      <div class="container-button">
+        <button class="zoom-in">+</button>
+        <button class="zoom-out">-</button>
+        <hr style="width: 60%; border: 1px solid #345; border-radius: 3em;">
+        <button class="remove-marker">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield-fill-x" viewBox="0 0 16 16">
+            <path d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.777 11.777 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7.159 7.159 0 0 0 1.048-.625 11.775 11.775 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.541 1.541 0 0 0-1.044-1.263 62.467 62.467 0 0 0-2.887-.87C9.843.266 8.69 0 8 0zM6.854 5.146 8 6.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 7l1.147 1.146a.5.5 0 0 1-.708.708L8 7.707 6.854 8.854a.5.5 0 1 1-.708-.708L7.293 7 6.146 5.854a.5.5 0 1 1 .708-.708z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="container-search">
+      <input class="search-input" type="text" placeholder="Search" />
+      <button class="search">Go</button>
+    </div>
+    <mapbox-search-box access-token="<your access token here>" proximity="0,0"></mapbox-search-box>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./js/mapbox_maps_api.js"></script>
+  </body>
 </html>
