--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -45,7 +45,7 @@
       <button class="search">Go</button>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/mapbox_maps_api.js"></script>
-    <script></script>
+    <script src="./js/keys.js"></script>
+    <script rel="script" src="./js/mapbox_maps_api.js" type="module"></script>
   </body>
 </html>
