--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -41,7 +41,8 @@
       </div>
     </div>
     <div class="container-search">
-      <input class="search-input" type="text" placeholder="Search" />
+      <label for="search-input" ></label>
+      <input id="search-input" class="search-input" type="text" placeholder="Search" />
       <button class="search">Go</button>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
