--- a/weather_map.html
+++ b/weather_map.html
@@ -52,12 +52,14 @@
         </div>
       </div>
     </nav>
+    <!-- End nav section -->
     <div class="container-header">
       <h1 class="header">My First Weather Map</h1>
     </div>
 
     <!-- TODO Weather stuff here? -->
 
+    <!-- start map section -->
     <div id="map">
       <div class="container-button">
         <button class="zoom-in" type="button" data-container="body" data-toggle="zoom-in" title="Zoom in" data-content="And here's some amazing content. It's very engaging. Right?">
@@ -87,9 +89,10 @@
       <input id="search-input" class="search-input" type="text" placeholder="Search" />
       <button class="search">Go</button>
     </div>
+    <!-- start script section -->
     <script id="bootstrap" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script id="jquery" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script id="keys" src="./js/keys.js"></script>
     <script id="weather_map" src="./js/weather_map.js"></script>
-  </body>
+  </body> 
 </html>
