adjusted a container to be more modular

--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/index.html
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/index.html
@@ -39,10 +39,12 @@
       </div>
     </nav>
     <!-- start of start page -->
+    <div class="wrapper-start-page-contents">
     <div class="container-start-page-contents">
       <h1 class="start-page-header">START PAGE</h1>
       <span class="template">Template by w3.css</span>
       <button class="get-started">Get Started</button>
+    </div>
     </div>
     <!-- end of start page -->
     <!-- start of first article -->
