--- a/conditionals.html
+++ b/conditionals.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Conditionals JS</title>
-</head>
-<body>
-<style>
-    body {
+  </head>
+  <body>
+    <style>
+      body {
         background-color: black;
         color: white;
         font-family: Arial;
-    }
-</style>
-<h1>Conditionals JS</h1>
-<script src="js/conditionals.js"></script>
-</body>
+      }
+    </style>
+    <h1>Conditionals JS</h1>
+    <script src="js/conditionals.js"></script>
+  </body>
 </html>
